// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/settings.ts should handle HAS_STARRED.FAILURE 1`] = `
Object {
  "appPosition": "tray",
  "hasStarred": false,
  "markOnClick": false,
  "openAtStartup": false,
  "participating": false,
  "playSound": true,
  "showNotifications": true,
}
`;

exports[`reducers/settings.ts should handle HAS_STARRED.SUCCESS 1`] = `
Object {
  "appPosition": "tray",
  "hasStarred": true,
  "markOnClick": false,
  "openAtStartup": false,
  "participating": false,
  "playSound": true,
  "showNotifications": true,
}
`;

exports[`reducers/settings.ts should handle UPDATE_SETTING 1`] = `
Object {
  "appPosition": "tray",
  "hasStarred": false,
  "markOnClick": false,
  "openAtStartup": false,
  "participating": true,
  "playSound": true,
  "showNotifications": true,
}
`;

exports[`reducers/settings.ts should handle UPDATE_SETTING 2`] = `
Object {
  "appPosition": "tray",
  "hasStarred": false,
  "markOnClick": false,
  "openAtStartup": true,
  "participating": false,
  "playSound": true,
  "showNotifications": true,
}
`;

exports[`reducers/settings.ts should return the initial state 1`] = `
Object {
  "appPosition": "tray",
  "hasStarred": false,
  "markOnClick": false,
  "openAtStartup": false,
  "participating": false,
  "playSound": true,
  "showNotifications": true,
}
`;
